tests/ui/bitfield/field_too_small.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_too_small.rs:6:32
  |
6 | struct BitField(#[field(0, 9)] Field); // `Field` is only 8 bits wide, and can not store 9 bits.
  |                                ^^^^^ the evaluated program panicked at 'Type is smaller than the specified size of 9 bits', $DIR/tests/ui/bitfield/field_too_small.rs:6:32
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Field as TryFrom<u16>>::Error == u16`
 --> tests/ui/bitfield/field_too_small.rs:6:32
  |
6 | struct BitField(#[field(0, 9)] Field); // `Field` is only 8 bits wide, and can not store 9 bits.
  |                                ^^^^^ expected `Infallible`, found `u16`

error[E0277]: the trait bound `Field: From<u16>` is not satisfied
 --> tests/ui/bitfield/field_too_small.rs:6:28
  |
6 | struct BitField(#[field(0, 9)] Field); // `Field` is only 8 bits wide, and can not store 9 bits.
  |                            ^^^^-----
  |                            |   |
  |                            |   required by a bound introduced by this call
  |                            the trait `From<u16>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<u8>` is implemented for `Field`
  = help: for that trait implementation, expected `u8`, found `u16`
  = note: required for `u16` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<u16>`

error[E0277]: the trait bound `Field: From<u16>` is not satisfied
 --> tests/ui/bitfield/field_too_small.rs:6:32
  |
6 | struct BitField(#[field(0, 9)] Field); // `Field` is only 8 bits wide, and can not store 9 bits.
  |                                ^^^^^ the trait `From<u16>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<u8>` is implemented for `Field`
  = help: for that trait implementation, expected `u8`, found `u16`
  = note: required for `u16` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<u16>`
